--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>JSON Editor</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <title>JSON Viewer and Editor</title>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <style>
+    .json-key {
+      font-weight: bold;
+    }
+    .json-node {
+      margin-left: 20px;
+    }
+  </style>
 </head>
 <body>
-  <h1>JSON Editor</h1>
-  
-  <textarea id="json-input" rows="10" cols="50" placeholder="Paste your JSON here"></textarea>
+  <h1>JSON Viewer and Editor</h1>
+  <textarea id="json-input1" placeholder="Paste JSON data here" rows="10" cols="50"></textarea>
+  <textarea id="json-input2" placeholder="Paste second JSON data here for merging" rows="10" cols="50"></textarea>
   <button id="load-json">Load JSON</button>
-
-  <div id="json-viewer"></div>
-  <button id="save-json">Save JSON</button>
   <button id="merge-json">Merge JSON</button>
-
+  <div id="json-viewer"></div>
   <script src="js/app.js"></script>
 </body>
 </html>
