--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 
             <h2>DSS Viewer</h2>
             <div>
-                <button id="load-json1">Show JSON 1</button>
-                <button id="load-json2">Show JSON 2</button>
-                <button id="load-json-merged">Show merged JSON</button>
+                <button id="load-json1" class="disabled">Show JSON 1</button>
+                <button id="load-json2" class="disabled">Show JSON 2</button>
+                <button id="load-json-merged" class="disabled">Show merged JSON</button>
             </div>
             <div id="json-viewer"></div>
         </div>
